force-app/main/default/objects/MPM4_BASE__TH_TimeEntryLineItem__c/MPM4_BASE__TH_TimeEntryLineItem__c.object-meta.xml
<CustomObject>
    <description>The Time Entry Line Item object records time entries populated on the Time Entry Grid.</description>
    <label>Time Entry Line</label>
    <nameField>
        <displayFormat>TEL-{0000}</displayFormat>
        <label>Time Entry Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entry Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>