force-app/main/default/objects/MPM4_BASE__TH_TimeEntryLineItem__c/fields/MPM4_BASE__Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Activity_ID__c</fullName>
    <externalId>true</externalId>
    <label>Activity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>