force-app/main/default/objects/MPM4_BASE__TH_TimeEntryLineItem__c/fields/MPM4_BASE__ActivityDateTime__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__ActivityDateTime__c</fullName>
    <label>ActivityDateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>