force-app/main/default/objects/MPM4_BASE__TH_TimeEntryLineItem__c/fields/MPM4_BASE__CreatedByEvent__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__CreatedByEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreatedByEvent</label>
    <type>Checkbox</type>
</CustomField>