force-app/main/default/objects/MPM4_BASE__TH_TimeEntryLineItem__c/fields/MPM4_BASE__Description__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>