force-app/main/default/objects/MPM4_BASE__TH_TimeEntryLineItem__c/fields/MPM4_BASE__DurationInMinutes__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__DurationInMinutes__c</fullName>
    <label>DurationInMinutes</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>