force-app/main/default/objects/MPM4_BASE__TH_TimeEntryLineItem__c/fields/MPM4_BASE__Hours_Input__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Hours_Input__c</fullName>
    <label>Hours Input</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>