force-app/main/default/objects/MPM4_BASE__TH_TimeEntryLineItem__c/fields/MPM4_BASE__ObjectIdOfRecordToRecordTimeOn__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__ObjectIdOfRecordToRecordTimeOn__c</fullName>
    <description>stores the id of the record that has time being recorded on it</description>
    <formula>MPM4_BASE__Time_Entry__r.MPM4_BASE__Object_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object ID of Record to Record Time On</label>
    <type>Text</type>
</CustomField>