force-app/main/default/objects/MPM4_BASE__TH_TimeEntryLineItem__c/fields/MPM4_BASE__Related_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Related_Object_ID__c</fullName>
    <formula>MPM4_BASE__Time_Entry__r.MPM4_BASE__Object_ID__c</formula>
    <label>Related Object ID</label>
    <type>Text</type>
</CustomField>