force-app/main/default/objects/MPM4_BASE__TH_TimeEntryLineItem__c/fields/MPM4_BASE__ReminderDateTime__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__ReminderDateTime__c</fullName>
    <label>ReminderDateTime</label>
    <type>DateTime</type>
</CustomField>