force-app/main/default/objects/MPM4_BASE__TH_TimeEntryLineItem__c/fields/MPM4_BASE__ShowAs__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__ShowAs__c</fullName>
    <label>ShowAs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Out of Office</fullName>
            </value>
            <value>
                <fullName>Free Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>