force-app/main/default/objects/MPM4_BASE__TH_TimeEntryLineItem__c/fields/MPM4_BASE__Time__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Time__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time</label>
    <referenceTo>MPM4_BASE__Milestone1_Time__c</referenceTo>
    <relationshipLabel>Time Entry Lines</relationshipLabel>
    <relationshipName>Time_Entry_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>