force-app/main/default/objects/MPM4_BASE__TH_TimeEntryLineItem__c/listViews/MPM4_BASE__All.listView-meta.xml
<ListView>
    <fullName>MPM4_BASE__All</fullName>
    <columns>NAME</columns>
    <columns>MPM4_BASE__Subject__c</columns>
    <columns>MPM4_BASE__ActivityDateTime__c</columns>
    <columns>MPM4_BASE__Hours_Input__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>MPM4_BASE__Approve__c</columns>
    <columns>MPM4_BASE__Deny__c</columns>
    <columns>MPM4_BASE__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>